--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "compression": "1.7.0",
     "concurrently": "3.5.0",
     "cors": "^2.8.5",
+    "css-loader": "^3.4.2",
     "express": "4.15.4",
     "express-http-proxy": "1.0.6",
     "lodash": "4.17.4",
+    "node-sass": "^4.13.1",
     "nodemon": "1.12.0",
     "npm-run-all": "4.1.1",
     "react": "^16.4.1",
@@ -37,6 +39,7 @@
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
+    "sass-loader": "^8.0.2",
     "serialize-javascript": "1.4.0",
     "webpack": "3.5.6",
     "webpack-dev-server": "2.8.2",
@@ -44,6 +47,7 @@
     "webpack-node-externals": "1.6.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "extract-text-webpack-plugin": "^3.0.2"
   }
 }
